--- a/src/style.css
+++ b/src/style.css
@@ -3,45 +3,52 @@ body {
     font-family: "Roboto", sans-serif;
   }
   
-  a {
-    color: #885df1;
-  }
-  
-  .weather-app {
-    background: white;
-    max-width: 600px;
-    margin: 45px auto;
-    box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
-    border-radius: 16px;
-    padding: 30px;
+  main {
+    padding: 30px 0;
   }
   
   header {
     border-bottom: 1px solid #f9f7fe;
-    padding: 0 0 30px 0;
+    padding-bottom: 30px;
+  }
+  
+  footer {
+    border-top: 1px solid #f9f7fe;
+    padding-top: 30px;
+    font-size: 14px;
+    text-align: center;
+    color: rgb(0, 0, 0, 0.6);
+  }
+  
+  a {
+    color: #885df1;
+  }
+  .weather-app {
+    background: white;
+    max-width: 600px;
+    margin: 45px auto;
+    padding: 30px;
+    box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+    border-radius: 16px;
   }
   
   .search-form-input {
-    background-color: #f9f7fe;
+    width: 80%;
     border: none;
     border-radius: 6px;
-    width: 80%;
+    background-color: #f9f7fe;
     font-size: 16px;
     padding: 15px 20px;
   }
   
   .search-form-button {
-    background: #885df1;
-    padding: 15px 30px;
+    background-color: #885df1;
     border: none;
-    font-size: 16px;
+    padding: 15px 30px;
     margin-left: 5px;
     border-radius: 6px;
     color: white;
-  }
-  
-  main {
-    padding: 30px 0;
+    font-size: 16px;
   }
   
   .weather-app-data {
@@ -62,34 +69,27 @@ body {
     font-weight: 500;
   }
   
-  .weather-app-details strong {
-    color: #f65282;
+  .weather-app-numbers {
+    color: #f65a8e;
+    font-weight: bold;
   }
   
-  .weather-app-temperature-container {
+  .temperature-container {
     display: flex;
   }
   
   .weather-app-icon {
-    font-size: 44px;
-    margin-top: 22px;
+    width: 88px;
+    height: 88px;
   }
   
   .weather-app-temperature {
     font-size: 88px;
-    margin-left: 10px;
+    line-height: 88px;
     font-weight: bold;
   }
   
-  .weatehr-app-unit {
-    margin-top: 16px;
+  .weather-app-unit {
+    margin-top: 6px;
     font-size: 28px;
-  }
-  
-  footer {
-    border-top: 1px solid #f9f7fe;
-    padding: 30px 0 0 0;
-    text-align: center;
-    font-size: 14px;
-    color: rgba(0, 0, 0, 0.6);
   }
