--- a/src/style.css
+++ b/src/style.css
@@ -1,95 +1,127 @@
 body {
-    background-color: #f9f7fe;
-    font-family: "Roboto", sans-serif;
-  }
-  
-  main {
-    padding: 30px 0;
-  }
-  
-  header {
-    border-bottom: 1px solid #f9f7fe;
-    padding-bottom: 30px;
-  }
-  
-  footer {
-    border-top: 1px solid #f9f7fe;
-    padding-top: 30px;
-    font-size: 14px;
-    text-align: center;
-    color: rgb(0, 0, 0, 0.6);
-  }
-  
-  a {
-    color: #885df1;
-  }
-  .weather-app {
-    background: white;
-    max-width: 600px;
-    margin: 45px auto;
-    padding: 30px;
-    box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
-    border-radius: 16px;
-  }
-  
-  .search-form-input {
-    width: 80%;
-    border: none;
-    border-radius: 6px;
-    background-color: #f9f7fe;
-    font-size: 16px;
-    padding: 15px 20px;
-  }
-  
-  .search-form-button {
-    background-color: #885df1;
-    border: none;
-    padding: 15px 30px;
-    margin-left: 5px;
-    border-radius: 6px;
-    color: white;
-    font-size: 16px;
-  }
-  
-  .weather-app-data {
-    display: flex;
-    justify-content: space-between;
-  }
-  
-  .weather-app-city {
-    margin: 0;
-    font-size: 38px;
-    line-height: 48px;
-  }
-  
-  .weather-app-details {
-    font-size: 16px;
-    color: rgba(39, 33, 66, 0.4);
-    line-height: 24px;
-    font-weight: 500;
-  }
-  
-  .weather-app-numbers {
-    color: #f65a8e;
-    font-weight: bold;
-  }
-  
-  .temperature-container {
-    display: flex;
-  }
-  
-  .weather-app-icon {
-    width: 88px;
-    height: 88px;
-  }
-  
-  .weather-app-temperature {
-    font-size: 88px;
-    line-height: 88px;
-    font-weight: bold;
-  }
-  
-  .weather-app-unit {
-    margin-top: 6px;
-    font-size: 28px;
-  }
+  background-color: #fcf6e7;
+  font-family: "Roboto", sans-serif;
+}
+
+a {
+  color: #e7ac12;
+}
+
+.weather-app {
+  background: white;
+  max-width: 600px;
+  margin: 45px auto;
+  box-shadow: 0 30px 50px rgba(65, 50, 100, 0.08);
+  border-radius: 16px;
+  padding: 30px;
+}
+
+header {
+  border-bottom: 1px solid #f9f7fe;
+  padding: 0 0 30px 0;
+}
+
+.search-form-input {
+  background-color: #f9f7fe;
+  border: none;
+  border-radius: 6px;
+  width: 80%;
+  font-size: 16px;
+  padding: 15px 20px;
+}
+
+.search-form-btn {
+  background: #5982ee;
+  padding: 15px 30px;
+  border: none;
+  font-size: 16px;
+  margin-left: 5px;
+  border-radius: 6px;
+  color: white;
+}
+
+main {
+  padding: 30px 0;
+}
+
+.weather-app-data {
+  display: flex;
+  justify-content: space-between;
+}
+
+.weather-app-city {
+  margin: 0;
+  font-size: 38px;
+  line-height: 48px;
+}
+
+.weather-app-details {
+  font-size: 16px;
+  color: rgba(39, 33, 66, 0.4);
+  line-height: 24px;
+  font-weight: 500;
+}
+
+.weather-app-details strong {
+  color: #6d8a0a;
+}
+
+.weather-app-temperature-container {
+  display: flex;
+}
+
+.weather-app-icon {
+  width: 88px;
+  height: 88px;
+}
+
+.weather-app-temperature {
+  font-size: 88px;
+  line-height: 88px;
+  font-weight: bold;
+}
+
+.weather-app-unit {
+  margin-top: 6px;
+  font-size: 28px;
+}
+
+.weather-forecast {
+  display: flex;
+  justify-content: space-around;
+  margin-top: 30px;
+}
+
+.weather-forecast-date {
+  text-align: center;
+  color: rgba(39, 33, 66, 0.4);
+  font-size: 16px;
+  line-height: 20px;
+  margin-bottom: 10px;
+}
+
+.weather-forecast-icon {
+  width: 88px;
+  height: 88px;
+  display: block;
+  margin: 0 auto;
+}
+.weather-forecast-temperatures {
+  text-align: center;
+  color: #6d8a0a;
+  margin-top: 10px;
+  display: flex;
+  justify-content: center;
+}
+
+.weather-forecast-temperature {
+  padding: 0 10px;
+}
+
+footer {
+  border-top: 1px solid #f9f7fe;
+  padding: 30px 0 0 0;
+  text-align: center;
+  font-size: 14px;
+  color: rgba(0, 0, 0, 0.6);
+}
